app/styles/main.css
/* BASE STYLES
============================================================================= */

body{
    padding-bottom: 70px;
    font-family : 'Signika', 'sans-serif';
}


html  { overflow-y:hidden; }


.page        { 
    bottom:0; 
    padding-top: 120px;
    position:absolute; 
    text-align:center;
    top:0;  
    width:100%; 
    color : #475350; 
    overflow-x : hidden;
}

.page h2{
    text-transform : uppercase;

    width : 100%;
    text-align : center;
}


.page h1    { font-size:60px; }
.page a     { margin-top:50px; }
#about      { color:#333; position:absolute; text-align:center; top:50px; width:100%; }

.page .centered-solo{
    padding-left : 25%;
    padding-right : 25%;
}


.page .content-scrollable-container{
    top  : 0%;
    position : absolute;
    height : 110%;
    width : 100%;
    overflow-y : auto;
    overflow-x : hidden;
    padding-left : 10px;
    padding-right: 10px;
    padding-top: 120px!important;
}

@media(max-width: 500px){

    .content-scrollable-container{
        top  : 20%;
        position : absolute;
        height : 100%;
        text-align : left;
        padding-left : 0px;
        padding-right : 0px;
        overflow-y : auto;  
        padding-bottom : 10%;
    }
}

.page .content-scrollable-content{
    padding-top : 5%;
    padding-bottom : 10%;
}


/* LOGO */
.logo-container{
    position : fixed;
    left : 0%;
    top : 40px;
    width : 100%;
    text-align:center;
    z-index : 1000;
    pointer-events : none;
}

.logo-wrapper{
    width : 100px;
    height : 100px;
    background : white;
    border-radius : 50%;
    display:inline-block;
    z-index : 1001;
    pointer-events : all;
    -webkit-transition: all 0.3s ease;                  
    -moz-transition: all 0.3s ease;                 
    -o-transition: all 0.3s ease;   
    -ms-transition: all 0.3s ease;          
    transition: all 0.3s ease;
}

.logo-wrapper.big{
    width : 150px;
    height : 150px;
}

.logo-wrapper:hover{
    width : 150px;
    height : 150px;
}


.logo-wrapper image{
    border-radius : 50%;
}


.member,person{
    font-weight : 800;
    cursor : pointer;
}


/* MENU */
nav{
    z-index:1001;
    background-color : white!important;
    border : none!important
    ;
}

.navbar-nav{
    float : none;
}
nav a{
    font-family : 'signika';
    text-transform : uppercase;
}

.navbar-nav>li{
    margin-bottom : -8px!important;
}

.navbar-nav>li>a{
    margin : 0;
}

.navbar-nav {
    display : inline-block;
    float: center;
}
nav #logoText{
    font-weight : 800;
}

/*version minified small screens */
.navbar-toggle{
    margin-right: 45%;
}


/* ITEMS */
/*SUPPRIMER CONTOURS */
.navbar-nav>.active>a, .navbar-nav>.active>a:hover{
    border : none;
    font-weight : 800;
}

.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>li>a{
    color : #475350;
    /*padding:0;*/
    /* margin :0;*/
}


.navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus{
    color : #475350; 
    border : none; 
    font-weight : 800; 
}

.navbar-brand
{
    position: absolute;
    width: 100%;
    left: 0;
    text-align: center;
    margin: auto;
    bottom : 10%;
}

.navbar-default .navbar-brand{
    color : #475350; 
    border : none; 
    font-weight : 800;
    opacity : 0.7;
}

.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus{
    opacity : 1;
    color : #475350; 
}

.dropdown-menu{
    min-width : 0;
}

nav .dropdown-menu>.active>a, .dropdown-menu>.active>a:hover, .dropdown-menu>.active>a:focus{
    background : white;
    color : #475350;
    font-weight : 800;
}

/* Accueil*/

h3.ss-titre{
    text-transform: uppercase;
    color : #475350;
    border-bottom : 3px solid #475350;;
}

.adviser{
    background: rgba(0,0,0,0.5);
    color : white;
    /* border : 3px solid white;*/
    text-transform : uppercase;
    opacity : 0.9;

}

.adviser a{
    text-decoration : none;
    color : white;
    padding : 5px;
}
.adviser:hover{
    opacity:1;
    /*background: rgba(0,0,0,0.6);*/
    background : #4A8E65;
    border : none;
}

.adviser h3{
    margin-top : 0;
}

/* Timeline twitter */

.list-description{
    display : none;
}

/* Version responsive */

.navbar .navbar-collapse {
    text-align: center;    
}

/* FIN NAV */


/* PAGES
============================================================================= */
.page      {
 /*background:transparent;*/background : #D3DD74;
 padding-top : 100px;
 overflow : hidden;
}


.page-membres, .page-personne{
   background : #B2D0EC;
}

.page-evenements{
    background : #B1D69F;
}


.page-methodes{
    background : #B1D69F;
}

/* ANIMATIONS
============================================================================= */

.page.ng-leave  { z-index:9999; }
.page.ng-enter  { z-index:8888; }

/* page specific animations ------------------------ */

/* home -------------------------- */
.page.ng-leave{
 -webkit-animation:scaleDown 0.5s both ease-out;
 -moz-animation:scaleDown 0.5s both ease-out;
 animation:scaleDown 0.5s both ease-out; 
}

.page.ng-enter{  
    -webkit-animation:scaleUp 0.5s both ease-in;
    -moz-animation:scaleUp 0.5s both ease-in;
    animation:scaleUp 0.5s both ease-in;    
}

